# ncstd

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
cmake/: object_library_helpers.cmake
ncstd/: CMakeLists.txt
ncstd_core/: CMakeLists.txt
ncstd_core/include/ncstd/: memory.h
ncstd_core/include/ncstd/containers/unsafe/: raw_buffer.h
ncstd_core/include/ncstd/macros/: option_macros.h
ncstd_core/include/ncstd/util/: create_util.h  panic_handlers.h
ncstd_core/src/: memory.c
ncstd_core/src/containers/unsafe/: raw_buffer.c
ncstd_core/src/util/: create_util.c  panic_handlers.c
ncstd_core/tests/: CMakeLists.txt  test_ncstd_core.c
ncstd_core/tests/tests/: test_smth.c
ncstd_exec_test/: CMakeLists.txt
ncstd_exec_test/src/: main.c
ncstd_iterator/: CMakeLists.txt
ncstd_iterator/include/ncstd/: iterator.h
ncstd_iterator/include/ncstd/iterators/: pointer_iterator.h
ncstd_iterator/src/: iterator.c
ncstd_iterator/src/iterators/: pointer_iterator.c
ncstd_string/: CMakeLists.txt
ncstd_string/include/ncstd/: chars_iterator.h  nc_string.h  string_view.h  utf8.h
ncstd_string/src/: chars_iterator.c  string.c  string_view.c  utf8.c
test_common/: CMakeLists.txt
test_common/include/ncstd/test/: test_common.h
test_common/src/: test_common.c
